# enable

./: .env  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
migrations/: 1_initial.sql  2_projects.sql  3_creds.sql
src/: auth.rs  db.rs  hash.rs  health.rs  lib.rs  main.rs  users.rs
src/environment/: mod.rs
src/features/: all.rs  create.rs  delete.rs  mod.rs  toggle.rs
src/models/: environment.rs  feature.rs  mod.rs  project.rs
src/projects/: all.rs  create.rs  meta.rs  mod.rs
static/: index.html
static/assets/: Admin-102dbea5.js  Admin-24af5726.js  Admin-312e145a.css  Admin-3167ca75.js  Admin-3a114b34.js  Admin-820f3e7e.js  Admin-92cd0169.css  Admin-9c4c16fe.js  Admin-b3f265bd.js  Admin-d987da17.js  Admin-e247fa15.js  Admin-ec9a2537.css  BackToProjects-08b9ab48.js  BackToProjects-08f04e1c.js  BackToProjects-3334f8ec.js  BackToProjects-64ccd274.js  BackToProjects-65d9419c.css  BackToProjects-becffead.js  BackToProjects-cdbc550f.js  BackToProjects-d15f176f.css  BackToProjects-fa774be7.js  Navbar-58f2cf46.css  Navbar-b091dd1d.js  Portal-0ebf484e.js  Portal-39177507.js  Portal-6961e4b0.js  Portal-b058bbb1.css  Portal-bbb113f2.js  Portal-c5add968.css  Portal-ce41b56e.js  Portal-e1d978fa.js  Portal-e8d6db0e.js  Project-098120a9.js  Project-1c529b8d.css  Project-32397eba.js  Project-4f60cc32.css  Project-80f999f5.js  Project-91d24e49.css  Project-ab2d56db.js  Project-ac5f67f4.css  (+37 more)
