[package]
name = "enable"
version = "0.1.0"
edition = "2021"
authors = ["viktormarinho"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-sessions = "0.5.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"] }
serde_json = "1.0.103"
argon2 = "0.5.1"
dotenv = "0.15.0"
rust-embed = "6.8.1"
mime_guess = "2"